small fixes (spacing, misspell)

--- a/style.css
+++ b/style.css
@@ -29,3 +29,6 @@ body{
     background-color: black;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
